--- a/ng-movie/src/app/components/list-movies/list-movies.component.scss
+++ b/ng-movie/src/app/components/list-movies/list-movies.component.scss
@@ -5,4 +5,15 @@ table {
 thead {
   font-weight: bold;
 }
-
+.phase {
+  font-weight: bold;
+  &.phase-one {
+    color: red;
+  }
+  &.phase-two {
+    color: blue;
+  }
+  &.phase-three {
+    color: green;
+  }
+}
