--- a/ng-movie/src/app/components/list-movies/list-movies.component.html
+++ b/ng-movie/src/app/components/list-movies/list-movies.component.html
@@ -6,7 +6,7 @@
   <ng-template #lessMovies>
     <p>Few movies only</p>
   </ng-template>
-  <button (click)="selectedPhase = undefined">
+  <button (click)="selectedPhase = 'All'">
     All
   </button>
   <button (click)="selectedPhase = 'Phase One'">
