--- a/todo-app/src/app/view/view.component.html
+++ b/todo-app/src/app/view/view.component.html
@@ -11,10 +11,10 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>{{selectedTask.Id}}</td>
-                    <td>{{selectedTask.Name}}</td>
-                    <td>{{selectedTask.Description}}</td>
-                    <td>{{selectedTask.DueDate | date}}</td>
+                    <td>{{selectedTask.id}}</td>
+                    <td>{{selectedTask.name}}</td>
+                    <td>{{selectedTask.description}}</td>
+                    <td>{{selectedTask.dueDate | date}}</td>
                 </tr>
             </tbody>
         </table>
