--- a/todo-app/src/app/list/list.component.scss
+++ b/todo-app/src/app/list/list.component.scss
@@ -80,3 +80,26 @@ table {
     text-shadow: 0 1px 0 #0c3258;
     outline: 0;
   }
+
+  .CreateButton{
+    text-align: center;
+    margin-top: 20px;
+ }
+ 
+ .btnCreate{
+     box-shadow: inset 0 1px 0 0 #dcecfb;
+     background: #0c3258 linear-gradient(to bottom, #0c3258 5%, #0c3258 100%);
+     border-radius: 6px;
+     border: 1px solid #0c3258;
+     display: inline-block;
+     cursor: pointer;
+     color: #ffffff;
+     font-family: Arial, sans-serif;
+     font-size: 15px;
+     font-weight: bold;
+     padding: 6px 24px;
+     text-decoration: none;
+     text-shadow: 0 1px 0 #0c3258;
+     outline: 0;
+ }
+ 
