--- a/todo-app/src/app/components/edit-task/edit-task.component.html
+++ b/todo-app/src/app/components/edit-task/edit-task.component.html
@@ -5,13 +5,14 @@
                 <mat-form-field>
                     <mat-label>Task</mat-label>
                     <input matInput placeholder="ex. Do Laundy" formControlName="taskName">
-                    <mat-error *ngIf="taskName?.errors | taskNameErrorMessage">Task is required</mat-error>
+                    <mat-error> {{taskName.errors | taskNameErrorMessage}} </mat-error>
                 </mat-form-field>
             </div>
             <div id="taskDescriptionContainer">
                 <mat-form-field>
                     <mat-label>Task Description </mat-label>
                     <input matInput placeholder="Type anything" formControlName="taskDescription">
+                    <mat-error>{{taskDescription.errors | taskDescriptionErrorMessage}}</mat-error>
                 </mat-form-field>
             </div>
         </div>
@@ -19,8 +20,7 @@
         <div id="dateContainer">
             <div id="dateCheckboxContainer">
                 <mat-checkbox id="withDateDue" formControlName="withDateDue" (onchange)="dateDueCheckBox($event)">With
-                    due
-                    date?
+                    due date?
                 </mat-checkbox>
             </div>
             <div id="dateDueContainer">
@@ -37,7 +37,8 @@
         <div id="matActionsContainer">
             <mat-card-actions>
                 <button mat-button [routerLink]="['/task/active']">CANCEL</button>
-                <button mat-button (click)="onSubmit()" (keyup.enter)="onSubmit()">SUBMIT</button>
+                <button mat-button id="submit-btn" (click)="onSubmit()"
+                    [class.mat-button-disabled]="taskForm.valid ? false: true">SUBMIT</button>
             </mat-card-actions>
         </div>
     </form>
