--- a/todo-app/src/app/components/edit-task/edit-task.component.html
+++ b/todo-app/src/app/components/edit-task/edit-task.component.html
@@ -1,45 +1,61 @@
-<mat-card>
-    <form [formGroup]="taskForm">
-        <div id="inputContainer">
-            <div id="taskTitleContainer">
-                <mat-form-field>
-                    <mat-label>Task</mat-label>
-                    <input matInput placeholder="ex. Do Laundy" formControlName="taskName">
-                    <mat-error> {{taskName.errors | taskNameErrorMessage}} </mat-error>
-                </mat-form-field>
-            </div>
-            <div id="taskDescriptionContainer">
-                <mat-form-field>
-                    <mat-label>Task Description </mat-label>
-                    <input matInput placeholder="Type anything" formControlName="taskDescription">
-                    <mat-error>{{taskDescription.errors | taskDescriptionErrorMessage}}</mat-error>
-                </mat-form-field>
-            </div>
-        </div>
+<section>
+    <div id="taskCardContainer">
+        <mat-card>
+            <form [formGroup]="taskForm">
+                <div id="inputContainer">
+                    <div id="taskTitleContainer">
+                        <mat-form-field>
+                            <mat-label>Task</mat-label>
+                            <input matInput placeholder="ex. Do Laundy" formControlName="taskName">
+                            <mat-error> {{taskName.errors | taskNameErrorMessage}} </mat-error>
+                        </mat-form-field>
+                    </div>
+                    <div id="taskDescriptionContainer">
+                        <mat-form-field>
+                            <mat-label>Task Description</mat-label>
+                            <input matInput placeholder="Type anything" formControlName="taskDescription">
+                            <mat-error>{{taskDescription.errors | taskDescriptionErrorMessage}}</mat-error>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div id="priorityTagContainer">
+                    <mat-form-field>
+                        <mat-label>Priority</mat-label>
+                        <mat-select formControlName="priorityTag">
+                            <mat-option *ngFor="let priorityTag of priorityTags" [value]="priorityTag">
+                                {{priorityTag}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
 
-        <div id="dateContainer">
-            <div id="dateCheckboxContainer">
-                <mat-checkbox id="withDateDue" formControlName="withDateDue" (onchange)="dateDueCheckBox($event)">With
-                    due date?
-                </mat-checkbox>
-            </div>
-            <div id="dateDueContainer">
-                <mat-form-field appearance="fill" *ngIf="withDateDue.value">
-                    <mat-label>Choose a date</mat-label>
-                    <input formControlName="dateDue" matInput [matDatepicker]="picker" [min]="currentDate">
-                    <mat-hint>MM/DD/YYYY</mat-hint>
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                    <mat-error *ngIf="dateDue?.errors | dateDueErrorMessage">Due Date is required</mat-error>
-                </mat-form-field>
-            </div>
-        </div>
-        <div id="matActionsContainer">
-            <mat-card-actions>
-                <button mat-button [routerLink]="['/task/active']">CANCEL</button>
-                <button mat-button id="submit-btn" (click)="onSubmit()"
-                    [class.mat-button-disabled]="taskForm.valid ? false: true">SUBMIT</button>
-            </mat-card-actions>
-        </div>
-    </form>
-</mat-card>
+                <div id="dateContainer">
+                    <div id="dateCheckboxContainer">
+                        <mat-checkbox id="withDateDue" formControlName="withDateDue"
+                            (onchange)="dateDueCheckBox($event)">
+                            With
+                            due date?
+                        </mat-checkbox>
+                    </div>
+                    <div id="dateDueContainer">
+                        <mat-form-field appearance="fill" *ngIf="withDateDue.value">
+                            <mat-label>Choose a date</mat-label>
+                            <input formControlName="dateDue" matInput [matDatepicker]="picker" [min]="currentDate">
+                            <mat-hint>MM/DD/YYYY</mat-hint>
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker></mat-datepicker>
+                            <mat-error *ngIf="dateDue?.errors | dateDueErrorMessage">Due Date is required</mat-error>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div id="matActionsContainer">
+                    <mat-card-actions>
+                        <button mat-button [routerLink]="['/task/active']">CANCEL</button>
+                        <button mat-button id="submit-btn" (click)="onSubmit()"
+                            [class.mat-button-disabled]="taskForm.valid ? false: true">SUBMIT</button>
+                    </mat-card-actions>
+                </div>
+            </form>
+        </mat-card>
+    </div>
+</section>
