--- a/todo-app/src/app/components/new-task/new-task.component.scss
+++ b/todo-app/src/app/components/new-task/new-task.component.scss
@@ -26,3 +26,18 @@ mat-card {
 #taskDescriptionContainer>mat-form-field {
     width: 100%;
 }
+
+section {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#subTaskContainer {
+    width: 50%;
+}
+
+@media screen and (max-width: 545px) {
+    mat-card {
+        width: 300px;
+    }
+}
