--- a/todo-app/src/app/components/new-task/new-task.component.html
+++ b/todo-app/src/app/components/new-task/new-task.component.html
@@ -33,8 +33,7 @@
                     <div id="dateCheckboxContainer">
                         <mat-checkbox id="withDateDue" formControlName="withDateDue"
                             (onchange)="dateDueCheckBox($event)">
-                            With
-                            due date?
+                            With due date?
                         </mat-checkbox>
                     </div>
                     <div id="dateDueContainer">
