--- a/todo-app/src/app/components/edit-task/edit-task.component.html
+++ b/todo-app/src/app/components/edit-task/edit-task.component.html
@@ -59,5 +59,5 @@
         </mat-card>
     </div>
 
-    <app-new-subtask [parentForm]="taskForm"></app-new-subtask>
+    <app-new-subtask [parentForm]="taskForm" [subTasksArray]="subTasksReceived"></app-new-subtask>
 </section>
