--- a/todo-app/src/app/components/active-tasks/active-tasks.component.scss
+++ b/todo-app/src/app/components/active-tasks/active-tasks.component.scss
@@ -32,3 +32,8 @@ mat-card-title {
 mat-card-content {
     margin-top: 30px;
 }
+
+.overdueChip {
+    background-color: rgb(255, 242, 0);
+    color: black;
+}
