--- a/todo-app/src/app/components/active-tasks/active-tasks.component.html
+++ b/todo-app/src/app/components/active-tasks/active-tasks.component.html
@@ -26,7 +26,7 @@
 <section id="taskCardSection">
     <div *ngFor="let task of activeTasks | filterByDate: selectedDateFilter | filterByPriorityTag: selectedPriorityTag">
         <mat-card id="taskCard">
-            <mat-card-title>{{task.name}}</mat-card-title>
+            <mat-card-title>{{task.taskName}}</mat-card-title>
             <div id="taskDescriptionContainer">
                 <mat-card-content>{{task.description}}</mat-card-content>
             </div>
@@ -49,11 +49,13 @@
                 </mat-card-content>
                 <mat-card-content>
                     <mat-chip-list>
+                        <mat-chip color="primary" selected>Active</mat-chip>
                         <mat-chip *ngIf="task.withDateDue && checkIfOverdue(task.dateDue)" class="overdueChip">Overdue
                         </mat-chip>
-                        <mat-chip color="primary" selected>Active</mat-chip>
+                        <mat-chip *ngIf="task.withDateDue && checkIfDueToday(task.dateDue)" class="dueTodayChip">
+                            Due today!
+                        </mat-chip>
                         <mat-chip [ngStyle]="stylePriorityTag(task.priorityTag)">{{task.priorityTag}}</mat-chip>
-
                         <div *ngIf="task.withDateDue; else withoutDateDue">
                             <mat-chip>With Due Date</mat-chip>
                             <mat-chip color="accent" selected>{{task.dateDue}}</mat-chip>
