--- a/todo-app/src/app/components/active-tasks/active-tasks.component.scss
+++ b/todo-app/src/app/components/active-tasks/active-tasks.component.scss
@@ -34,6 +34,11 @@ mat-card-content {
 }
 
 .overdueChip {
-    background-color: rgb(255, 242, 0);
-    color: black;
+    background-color: rgb(255, 0, 0);
+    color: white;
+}
+
+.dueTodayChip {
+    background-color: rgb(0, 215, 50);
+    color: white;
 }
