--- a/todo-app/src/app/components/edit-task/edit-task.component.html
+++ b/todo-app/src/app/components/edit-task/edit-task.component.html
@@ -1,16 +1,16 @@
 <section>
-    <div id="taskCardContainer">
+    <div class="taskCardContainer">
         <mat-card>
             <form [formGroup]="taskForm">
-                <div id="inputContainer">
-                    <div id="taskTitleContainer">
+                <div class="inputContainer">
+                    <div class="taskTitleContainer">
                         <mat-form-field>
                             <mat-label>Task</mat-label>
                             <input matInput placeholder="ex. Do Laundy" formControlName="taskName">
                             <mat-error> {{taskName.errors | taskNameErrorMessage}} </mat-error>
                         </mat-form-field>
                     </div>
-                    <div id="taskDescriptionContainer">
+                    <div class="taskDescriptionContainer">
                         <mat-form-field>
                             <mat-label>Task Description</mat-label>
                             <input matInput placeholder="Type anything" formControlName="taskDescription">
@@ -18,7 +18,7 @@
                         </mat-form-field>
                     </div>
                 </div>
-                <div id="priorityTagContainer">
+                <div class="priorityTagContainer">
                     <mat-form-field>
                         <mat-label>Priority</mat-label>
                         <mat-select formControlName="priorityTag">
@@ -29,35 +29,54 @@
                     </mat-form-field>
                 </div>
 
-                <div id="dateContainer">
-                    <div id="dateCheckboxContainer">
-                        <mat-checkbox id="withDateDue" formControlName="withDateDue"
-                            (onchange)="dateDueCheckBox($event)">
-                            With
-                            due date?
-                        </mat-checkbox>
+                <div class="checkboxesContainer">
+                    <div class="dateContainer">
+                        <div class="dateCheckboxContainer">
+                            <mat-checkbox id="withDateDue" formControlName="withDateDue"
+                                (onchange)="checkboxEvent($event)">
+                                With due date?
+                            </mat-checkbox>
+                        </div>
+                        <div class="dateDueContainer">
+                            <mat-form-field appearance="fill" *ngIf="withDateDue.value">
+                                <mat-label>Choose a date</mat-label>
+                                <input formControlName="dateDue" matInput [matDatepicker]="picker" [min]="currentDate">
+                                <mat-hint>MM/DD/YYYY</mat-hint>
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker touchUi #picker></mat-datepicker>
+                                <mat-error *ngIf="dateDue?.errors | dateDueErrorMessage">Due Date is required
+                                </mat-error>
+                            </mat-form-field>
+                        </div>
                     </div>
-                    <div id="dateDueContainer">
-                        <mat-form-field appearance="fill" *ngIf="withDateDue.value">
-                            <mat-label>Choose a date</mat-label>
-                            <input formControlName="dateDue" matInput [matDatepicker]="picker" [min]="currentDate">
-                            <mat-hint>MM/DD/YYYY</mat-hint>
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-datepicker #picker></mat-datepicker>
-                            <mat-error *ngIf="dateDue?.errors | dateDueErrorMessage">Due Date is required</mat-error>
-                        </mat-form-field>
+
+                    <div class="recurringTaskContainer">
+                        <div class=" recurringTaskCheckboxContainer">
+                            <mat-checkbox (onchange)="checkboxEvent($event)" formControlName="recurringTask">
+                                Recurring Task?</mat-checkbox>
+                        </div>
+                        <div class="recurringTaskDropDownContainer">
+                            <mat-form-field *ngIf="recurringTask.value">
+                                <mat-label>Schedule?</mat-label>
+                                <mat-select formControlName="schedule">
+                                    <mat-option *ngFor="let schedule of scheduleChoices" [value]="schedule">
+                                        {{schedule}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
                     </div>
                 </div>
-                <div id="matActionsContainer">
+
+                <div class="matActionsContainer">
                     <mat-card-actions>
                         <button mat-button [routerLink]="['/task/active']">CANCEL</button>
                         <button mat-button id="submit-btn" (click)="onSubmit()"
-                            [class.mat-button-disabled]="taskForm.valid ? false: true">SUBMIT</button>
+                            [class.mat-button-disabled]="taskForm.valid && subTasks.valid? false: true">SUBMIT</button>
                     </mat-card-actions>
                 </div>
             </form>
         </mat-card>
     </div>
-
     <app-new-subtask [parentForm]="taskForm" [subTasksArray]="subTasksReceived"></app-new-subtask>
 </section>
